--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
 
 .header-container {
     display: flex;    
-    justify-content: space-evenly;
-    background: #1F2937;
-    padding-bottom: 300px;
+    justify-content: center;
+    background: #1F2937; 
+    padding-bottom: 100px;
+    gap: 500px;
 }
 
 .header-container span {
-    margin: 20px 30% 0px 0px;    
+    margin-top: 15px;
     color: #F9FAF8;
     font-size: 24px;
     font-weight: bold;
@@ -19,13 +20,58 @@
 
 nav ul {
     display: flex;  
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 ul li a {    
     text-decoration: none;
     color: #FFFFFF;
     margin-left: 20px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.hero-container {
+    gap: 160px;
+    display: flex;
+    padding-bottom: 100px;
+    align-items: center;
+    background: #1F2937;     
+    justify-content: center;
+}
+
+.hero-secondary-container {
+    width: 25%;
+}
+
+.hero-secondary-container span, p {    
+    font-family: 'Rubik', sans-serif;
+}
+
+.hero-secondary-container span {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.hero-secondary-container p {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 10px 0px;   
+}
+
+.hero-container img {
+    width: 400px;
+    height: 200px;
+}
+
+.hero-secondary-container button {
+    border: none;    
+    width: 100px;
+    height: 30px;
+    color: #F9FAF8;
+    border-radius: 5px;
+    font-weight: bolder;
+    background: #3882F6;
     font-family: 'Rubik', sans-serif;
 }
 
