--- a/style.css
+++ b/style.css
@@ -18,20 +18,21 @@
     font-family: 'Rubik', sans-serif;
 }
 
-nav ul {
+.header-container nav ul {
     display: flex;  
     margin-top: 15px;
 }
 
-ul li a {    
-    text-decoration: none;
-    color: #FFFFFF;
+.header-container nav ul li a {    
+    text-decoration: none;    
     margin-left: 20px;
+    font-size: 18px;
     font-family: 'Rubik', sans-serif;
+    color: #F9FAF8;
 }
 
 .hero-container {
-    gap: 160px;
+    gap: 280px;
     display: flex;
     padding-bottom: 100px;
     align-items: center;
@@ -40,7 +41,7 @@ ul li a {
 }
 
 .hero-secondary-container {
-    width: 25%;
+    width: 20%;
 }
 
 .hero-secondary-container span, p {    
@@ -62,6 +63,7 @@ ul li a {
 .hero-container img {
     width: 400px;
     height: 200px;
+    margin-right: 20px;
 }
 
 .hero-secondary-container button {
