--- a/style.css
+++ b/style.css
@@ -2,18 +2,19 @@
     box-sizing: border-box;
 }
 
-.header-container {
+.header-container {    
+    gap: 500px;
     display: flex;    
-    justify-content: center;
     background: #1F2937; 
     padding-bottom: 100px;
-    gap: 500px;
+    justify-content: center;
 }
 
-.header-container span {
+.header-container span {    
+    
+    font-size: 24px;
     margin-top: 15px;
     color: #F9FAF8;
-    font-size: 24px;
     font-weight: bold;
     font-family: 'Rubik', sans-serif;
 }
@@ -24,18 +25,18 @@
 }
 
 .header-container nav ul li a {    
-    text-decoration: none;    
-    margin-left: 20px;
     font-size: 18px;
+    color: #F9FAF8;    
+    margin-left: 20px;
+    text-decoration: none;    
     font-family: 'Rubik', sans-serif;
-    color: #F9FAF8;
 }
 
 .hero-container {
     gap: 205px;
-    display: flex;
-    padding-bottom: 100px;
+    display: flex;    
     align-items: center;
+    padding-bottom: 100px;
     background: #1F2937;     
     justify-content: center;
 }
@@ -44,14 +45,14 @@
     width: 25%;
 }
 
-.hero-secondary-container span, p {    
+.hero-secondary-container h1, p {    
     font-family: 'Rubik', sans-serif;
 }
 
-.hero-secondary-container span {
-    font-size: 48px;
-    font-weight: bolder;
+.hero-secondary-container h1 {
+    font-size: 48px;    
     color: #F9FAF8;
+    font-weight: bolder;
 }
 
 .hero-secondary-container p {
@@ -75,4 +76,50 @@
     background: #3882F6;
     font-family: 'Rubik', sans-serif;
 }
+.info h2 {
+    font-size: 30px;
+    margin: 50px 0px;
+    text-align: center;
+    font-weight: bolder;    
+    font-family: 'Rubik', sans-serif;
+}
+
+.info-container {
+    gap: 80px;    
+    display: flex;    
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+.info-box {
+    width: 130px; 
+    text-align: center;       
+}
+
+.box {
+    margin-bottom: 5px;
+    height: 130px;    
+    border-radius: 10px;
+    border: 3px solid #3882F6;
+}
+
+.quote {
+    background: #E5E7EB;
+    padding: 200px;
+}
+
+.call-to-action {
+    padding: 200px;
+}
+
+footer {    
+    padding: 40px;
+    color: #F9FAF8;
+    text-align: center;
+    background: #1F2937; 
+    font-family: 'Rubik', sans-serif;
+    
+}
+
+
 
