--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Rubik', sans-serif;
+}
+
 .header-container {    
     gap: 500px;
     display: flex;    
@@ -10,13 +14,11 @@
     justify-content: center;
 }
 
-.header-container span {    
-    
+.header-container span {        
     font-size: 24px;
     margin-top: 15px;
     color: #F9FAF8;
     font-weight: bold;
-    font-family: 'Rubik', sans-serif;
 }
 
 .header-container nav ul {
@@ -29,7 +31,6 @@
     color: #F9FAF8;    
     margin-left: 20px;
     text-decoration: none;    
-    font-family: 'Rubik', sans-serif;
 }
 
 .hero-container {
@@ -43,10 +44,6 @@
 
 .hero-secondary-container {
     width: 25%;
-}
-
-.hero-secondary-container h1, p {    
-    font-family: 'Rubik', sans-serif;
 }
 
 .hero-secondary-container h1 {
@@ -74,25 +71,24 @@
     border-radius: 5px;
     font-weight: bolder;
     background: #3882F6;
-    font-family: 'Rubik', sans-serif;
 }
 .info h2 {
     font-size: 30px;
     margin: 50px 0px;
     text-align: center;
     font-weight: bolder;    
-    font-family: 'Rubik', sans-serif;
 }
 
 .info-container {
     gap: 80px;    
-    display: flex;    
+    display: flex;
     justify-content: center;
     margin-bottom: 100px;
 }
 
 .info-box {
     width: 130px; 
+    font-size: 14px;
     text-align: center;       
 }
 
@@ -104,8 +100,23 @@
 }
 
 .quote {
-    background: #E5E7EB;
     padding: 200px;
+    background: #E5E7EB;    
+}
+
+.quote p {
+    width: 1000px;
+    padding: 20px;
+    margin: 0 auto;
+    font-size: 30px;
+    font-style: italic;
+}
+
+.quote span {
+    right: 520px;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
 }
 
 .call-to-action {
@@ -117,8 +128,6 @@ footer {
     color: #F9FAF8;
     text-align: center;
     background: #1F2937; 
-    font-family: 'Rubik', sans-serif;
-    
 }
 
 
